<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_height="match_parent" android:layout_width="match_parent">
        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/task_name" android:id="@+id/UsernameTextView"/>
            <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/TaskNamePlainText" android:inputType="text" android:ems="10"/>
        </TableRow>

        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/end_date" android:id="@+id/EndDateTextView"/>
            <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/EndDatePlainText" android:inputType="datetime" android:ems="10"/>
        </TableRow>

        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <Button android:layout_height="match_parent" android:layout_width="103dp" android:text="@string/comfirm" android:id="@+id/ComfirmButton"/>
        </TableRow>
    </TableLayout>
</LinearLayout>